--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,10 @@ dependencies = [
     "langgraph-checkpoint-sqlite>=2.0.6",
     "langchain-ollama>=0.3.0",
     "langchain-anthropic>=0.3.10",
+    "llama-index-vector-stores-chroma>=0.4.1",
+    "llama-index-embeddings-huggingface>=0.5.2",
+    "flair>=0.15.1",
+    "llama-index-llms-langchain>=0.6.1",
 ]
 
 
