--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,13 @@ dependencies = [
     "llama-index-embeddings-huggingface>=0.5.2",
     "flair>=0.15.1",
     "llama-index-llms-langchain>=0.6.1",
+    "ragas>=0.2.14",
+    "llama-index-retrievers-bm25>=0.5.2",
+    "tkhtmlview>=0.3.1",
+    "markdown>=3.7",
+    "streamlit>=1.44.1",
+    "streamlit-autorefresh>=1.0.1",
+    "langchain-google-genai>=2.1.2",
 ]
 
 
